1: 实现了面向接口编程(建议存储接口与实现类的包分开) 2: 学习JVM参数调优（设置堆、方法区大小）